--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Phetsarath:wght@400;700&amp;family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
     <title>Portafolio</title>
-    <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/b28a6a8b5f8f2c38a8aeb6f61db42097jpg.png" type="image/x-icon">
     <!-- Iconos -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <!-- CSS -->
@@ -38,7 +38,7 @@
     </div>
     <header class="header">
       <nav class="navbar grid--container flex--container">
-        <a class="navbar__logo flex--container" href="#"><i class="bx bxs-registered"></i>Goku</a>
+        <a class="navbar__logo flex--container" href="#"><i class="bx bxs-registered"></i>Daniel</a>
   
         <div id="nav" class="navbar__menu">
           <a href="#close"><i class="bx bx-x btn__close navbar__icon flex--container"></i></a>
@@ -48,7 +48,7 @@
               <a class="navbar__link active" href="#home">Inicio</a>
             </li>
             <li class="navbar__item">
-              <a class="navbar__link" href="#about">Acerca de Mí</a>
+              <a class="navbar__link" href="#about">Acerca de mi</a>
             </li>
             <li class="navbar__item">
               <a class="navbar__link" href="#skills">Habilidades</a>
@@ -113,11 +113,11 @@
           </ul>
   
           <div class="home__info">
-            <h1 class="home__title">Hey, soy Goku</h1>
+            <h1 class="home__title">Hola, Soy Daniel</h1>
   
             <p class="home__description">
-              Soy desarrollador web, apasionado por la tecnología y la
-              programación.
+              Soy desarrollador web, Amante de la tecnologia
+                          y el futuro
             </p>
           </div>
   
@@ -134,10 +134,10 @@
   
         <div class="about__container grid--container">
           <p class="about__description">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet
-            incidunt aut distinctio maxime recusandae. Velit exercitationem
-            ducimus cupiditate corrupti eveniet soluta accusamus quasi,
-            suscipit, vitae optio, officiis rerum cumque numquam.
+            Empece a estudiar programacion a los 16 años aunque no era algo que lo tomara a tiempo completo,
+            Aprendia gracias a internet y asi empece a agarrarle mas cariño poco a poco a este bello mundo,
+             Ahora cada vez que veo un problema acerda de programacion busco hasta el ultimo recurso y
+              lo resuelvo de la manera mas optima posible aunque no siempre sale tan bien. :3 
           </p>
   
           <div class="about__cards flex--container">
@@ -162,10 +162,9 @@
   
         <div class="skills__container grid--container">
           <p class="skills__description flex--container">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet
-            incidunt aut distinctio maxime recusandae. Velit exercitationem
-            ducimus cupiditate corrupti eveniet soluta accusamus quasi,
-            suscipit, vitae optio, officiis rerum cumque numquam.
+            Mis habilidades por ahora son pocas, comparandolas con programadores expertos
+            pero creo que soy capas de hacer una web decente, aunque no sepa nada del tema me pasare horas 
+            investigando para resolverlo.
           </p>
   
           <div class="skills__wrapper flex--container">
@@ -179,11 +178,7 @@
                   <h3 class="skills__card-title">HTML</h3>
   
                   <p class="skills__card-description">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Est, fuga nesciunt, officia nobis blanditiis in aperiam
-                    voluptatum officiis repellendus beatae consectetur. In,
-                    provident excepturi? Ratione doloribus consequuntur sit
-                    officia cupiditate.
+                        Aunque mi experiencia en HTML5 es un poco baja, soy muy consciente de la importancia de escribir código limpio y semántico, lo que me permite asegurarme de que mis proyectos sean escalables y fáciles de mantener. Tengo curiosidad por aprender más sobre la integración optima con CSS3, JavaScript y mas, y siempre busco formas de optimizar mis proyectos y mejorar mis habilidades. Gracias :3
                   </p>
                 </div>
               </details>
@@ -196,11 +191,7 @@
                   <h3 class="skills__card-title">CSS3</h3>
   
                   <p class="skills__card-description">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Est, fuga nesciunt, officia nobis blanditiis in aperiam
-                    voluptatum officiis repellendus beatae consectetur. In,
-                    provident excepturi? Ratione doloribus consequuntur sit
-                    officia cupiditate.
+                    Mi experiencia con CSS3 aun es algo basta, tengo un enfoque enfocado en la organización del código y la separación de preocupaciones, utilizando buenas prácticas como clases reutilizables y la implementación de un diseño basado en contenedores flexibles. Me interesa mucho aprender más sobre técnicas avanzadas de diseño, la optimización para dispositivos móviles y el uso optimo de las todas las clases y pseudo-clases y funciones para mejorar la mantenibilidad del código.
                   </p>
                 </div>
               </details>
@@ -213,11 +204,7 @@
                   <h3 class="skills__card-title">Javascript</h3>
   
                   <p class="skills__card-description">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Est, fuga nesciunt, officia nobis blanditiis in aperiam
-                    voluptatum officiis repellendus beatae consectetur. In,
-                    provident excepturi? Ratione doloribus consequuntur sit
-                    officia cupiditate.
+                   Mi experiencia usandolo no es tan mala a decir verdad se podria decir que estoy a poco de salir de junior aunque la verdad nose como medir mi nivel actual pero estoy consiente que no soy un Mid Level y Creo que es uno de los lenguajes mas bonitos que hay ya que practicamente puedes hacer de todo con el desde lo mas basico hasta cosas avanzadas pero se que es un camilo muy largo para poder decir que sé trabajar con JavaScript de buena manera. 
                   </p>
                 </div>
               </details>
