--- a/index-en.html
+++ b/index-en.html
@@ -88,7 +88,7 @@
       <i class="bx bx-code-alt home__layer home__layer--11" data-speed="-5"></i>
       <div class="home__container grid--container">
         <div class="home__image">
-          <img src="assets/img/profile.png" alt="profile photo" title="Tu nombre">
+          <img src="assets/img/164195973,width=178,height=178.webp" alt="profile photo" title="Tu nombre">
         </div>
 
         <ul class="home__social flex--container">
@@ -129,13 +129,7 @@
 
         <div class="about__cards flex--container">
           <div class="about__card">
-            <img class="about__card--img" src="assets/img/me_1.jpg" alt="Laborando como ingeniero" title="Laborando como ingeniero">
-          </div>
-          <div class="about__card">
-            <img class="about__card--img" src="assets/img/me_2.jpg" alt="Laborando como diseñador" title="Laborando como diseñador">
-          </div>
-          <div class="about__card">
-            <img class="about__card--img" src="assets/img/me_3.jpg" alt="Trabajando en equipo" title="rabajando en equipo">
+            <video loop autoplay muted playsinline> <source src="/assets/Archivos/Gatito estresado.mp4" type="video/mp4" title="Estresed"></video>
           </div>
         </div>
       </div>
