--- a/index.html
+++ b/index.html
@@ -227,10 +227,12 @@
                  Una prueba de como se puede manejar flex para que el codigo sea responsivo.
                 </p>
                 <div class="projects__buttons">
+                  <a href=https://flexi3.netlify.app target="_blank">
                   <button class="btn projects__button" type="button">
                     VER DEMO
                   </button>
-                  <a href=https://github.com/Axreli3/Flex->
+                </a>
+                  <a href=https://github.com/Axreli3/Flex- target="_blank">
                     <button class="btn projects__button" type="button">
                       VER CÓDIGO
                     </button>
