--- a/index-en.html
+++ b/index-en.html
@@ -228,12 +228,16 @@
               </p>
 
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  SEE DEMO
-                </button>
-                <button class="btn projects__button" type="button">
-                  SEE CODE
-                </button>
+                <a href=https://flexi3.netlify.app target="_blank">
+                  <button class="btn projects__button" type="button">
+                    VER DEMO
+                  </button>
+                </a>
+                  <a href=https://github.com/Axreli3/Flex- target="_blank">
+                    <button class="btn projects__button" type="button">
+                      VER CÓDIGO
+                    </button>
+                  </a>
               </div>
             </div>
           </div>
@@ -253,10 +257,10 @@
 
               <div class="projects__buttons">
                 <button class="btn projects__button" type="button">
-                  SEE DEMO
+                  :c
                 </button>
                 <button class="btn projects__button" type="button">
-                  SEE CODE
+                  :c 
                 </button>
               </div>
             </div>
