--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <p class="about__description">
             Comencé a estudiar programación a los 16 años, aunque no fue algo que tomara a tiempo completo. Aprendí a través de internet, y poco a poco, empecé a desarrollar un amor más profundo por este maravilloso mundo. Ahora, cada vez que me encuentro con un problema de programación, busco todos los recursos posibles y lo resuelvo de la manera más óptima posible, aunque no siempre salga perfectamente. :3
           </p>
-          <div class="about__cards flex--container">
+          <div class="about__cards ">
             <div class="about__card">
               <video loop autoplay muted playsinline> <source src="/assets/Archivos/Gatito estresado.mp4" type="video/mp4" title="Estresado"></video>
             </div>
